login and logout working

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="inlog">
 <head>
-  <title>thinkster-django-angular-boilerplate</title>
+  <title>boilerplate angular app with django backend</title>
 
   <base href="/" />
 
