--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -14,15 +14,16 @@
 <script type="text/javascript" src="{% static 'bower_components/ngDialog/js/ngDialog.js' %}"></script>
 <script type="text/javascript" src="{% static 'bower_components/snackbarjs/dist/snackbar.min.js' %}"></script>
 
-<script type="text/javascript" src="{% static 'javascripts/inlog.js' %}"></script>
 {% endcompress %}
 
-
-<script type="text/javascript" src="{% static 'javascripts/inlog.config.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/inlog.routes.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/authentication/authentication.module.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/authentication/services/authentication.service.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/authentication/controllers/register.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/authentication/controllers/login.controller.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/layout/layout.module.js' %}"></script>
-<script type="text/javascript" src="{% static 'javascripts/layout/controllers/navbar.controller.js' %}"></script>
+<!-- inject:js -->
+<script src="/static/javascripts/layout/layout.module.js"></script>
+<script src="/static/javascripts/layout/controllers/navbar.controller.js"></script>
+<script src="/static/javascripts/authentication/authentication.module.js"></script>
+<script src="/static/javascripts/authentication/register.controller.js"></script>
+<script src="/static/javascripts/authentication/login.controller.js"></script>
+<script src="/static/javascripts/authentication/authentication.service.js"></script>
+<script src="/static/javascripts/inlog.js"></script>
+<script src="/static/javascripts/inlog.routes.js"></script>
+<script src="/static/javascripts/inlog.config.js"></script>
+<!-- endinject -->
