--- a/static/templates/authentication/register.html
+++ b/static/templates/authentication/register.html
@@ -15,6 +15,13 @@
         </div>
 
         <div class="form-group">
+          <label for="user_type">User Type</label>
+          <input type="radio" class="form-control" id="user_type" ng-model="vm.userType" value="0" /> Employee
+          <input type="radio" class="form-control" id="user_type" ng-model="vm.userType" value="1" /> Employer
+          <input type="radio" class="form-control" id="user_type" ng-model="vm.userType" value="2" /> Admin
+        </div>
+
+        <div class="form-group">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
