--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -13,12 +13,10 @@
     <div class="collapse navbar-collapse" id="not-google-plus-nav">
       <ul class="nav navbar-nav pull-right">
         {% if user.is_authenticated %}
-          <li><a href="/+{{ user.username }}">+{{ user.username }}</a></li>
-          <li><a href="/+{{ user.username }}/settings">Settings</a></li>
           <li><a href="javascript:void(0)" ng-click="vm.logout()">Logout</a></li>
+          <li ng-if="vm.isAdmin()"><a href="/register">Create new user</a></li>
         {% else %}
           <li><a href="/login">Login</a></li>
-          <li><a href="/register">Register</a></li>
         {% endif %}
       </ul>
     </div> <!-- /.collapse.navbar-collapse -->
