Added styling to already existing functionality

--- a/templates/javascripts.html
+++ b/templates/javascripts.html
@@ -23,6 +23,7 @@
 <script src="/static/javascripts/authentication/register.controller.js"></script>
 <script src="/static/javascripts/authentication/login.controller.js"></script>
 <script src="/static/javascripts/authentication/authentication.service.js"></script>
+<script src="/static/javascripts/app/main.controller.js"></script>
 <script src="/static/javascripts/inlog.js"></script>
 <script src="/static/javascripts/inlog.routes.js"></script>
 <script src="/static/javascripts/inlog.config.js"></script>
