--- a/static/templates/authentication/login.html
+++ b/static/templates/authentication/login.html
@@ -1,25 +1,36 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
+  <div class="col-md-8 col-md-offset-2">
     <h1>Login</h1>
 
-    <div class="well">
+    <div class="login">
       <form role="form" ng-submit="vm.login()">
-        <div class="alert alert-danger" ng-show="error" ng-bind="error"></div>
+        <div class="row top">
+          <div class="col-sm-4">
+              <img src="/static/images/logo-bsp.png" alt=""/>
+          </div>
+          <div class="col-sm-8">
+              <div class="alert alert-danger" ng-show="error" ng-bind="error"></div>
 
-        <div class="form-group">
-          <label for="login__email">Email</label>
-          <input type="text" class="form-control" id="login__email" ng-model="vm.email" placeholder="ex. john@example.com" />
+              <div class="form-group">
+                <label for="login__email">Email</label>
+                <input type="text" class="form-control" id="login__email" ng-model="vm.email" placeholder="ex. john@example.nl" />
+              </div>
+
+              <div class="form-group">
+                <label for="login__password">Password</label>
+                <input type="password" class="form-control" id="login__password" ng-model="vm.password" placeholder="ex. welkom123" />
+              </div>
+          </div>
         </div>
-
-        <div class="form-group">
-          <label for="login__password">Password</label>
-          <input type="password" class="form-control" id="login__password" ng-model="vm.password" placeholder="ex. thisisnotgoogleplus" />
-        </div>
-
-        <div class="form-group">
-          <button type="submit" class="btn btn-primary">Submit</button>
+        <div class="row bottom">
+          <div class="col-sm-12">
+            <div class="form-group pull-right">
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+          </div>
         </div>
       </form>
+
     </div>
   </div>
 </div>
