--- a/static/templates/authentication/register.html
+++ b/static/templates/authentication/register.html
@@ -15,10 +15,29 @@
         </div>
 
         <div class="form-group">
-          <label for="user_type">User Type</label>
-          <input type="radio" class="form-control" id="user_type" ng-model="vm.userType" value="0" /> Employee
-          <input type="radio" class="form-control" id="user_type" ng-model="vm.userType" value="1" /> Employer
-          <input type="radio" class="form-control" id="user_type" ng-model="vm.userType" value="2" /> Admin
+          <div class="">
+            <label for="">User type</label>
+          </div>
+          <div>
+          <label for="user_type">
+            Employee
+            <input type="radio" class="" id="user_type" ng-model="vm.userType" value="0" />
+          </label>
+
+          </div>
+          <div>
+            <label for="user_type2">
+              Employer
+              <input type="radio" class="" id="user_type2" ng-model="vm.userType" value="1" />
+            </label>
+          </div>
+          <div>
+            <label for="user_type3">
+              Admin
+              <input type="radio" class="" id="user_type3" ng-model="vm.userType" value="2" />
+            </label>
+          </div>
+
         </div>
 
         <div class="form-group">
